--- a/package.json
+++ b/package.json
@@ -3,28 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3400 & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 443 --target 3400",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "node server.js",
+    "lint": "next lint",
+    "proxy": "mkcert -install && mkcert localhost && local-ssl-proxy --source 3010 --target 3000 --cert localhost.pem --key localhost-key.pem"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "express": "^4.18.2",
     "gsap": "^3.12.2",
     "gsap-trial": "^3.12.2",
+    "https": "^1.0.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mkcert": "^3.0.0",
     "next": "13.4.19",
+    "next-https": "^1.1.14",
     "next-transpile-modules": "^10.0.1",
+    "nss": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
-    "typescript": "5.2.2"
+    "swr": "^2.2.2",
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.4",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
