--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3400 & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 443 --target 3400",
+    "dev": "next dev",
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,15 +20,18 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "gsap": "^3.12.2",
     "gsap-trial": "^3.12.2",
     "https": "^1.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mailgun-js": "^0.22.0",
     "mkcert": "^3.0.0",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "next-https": "^1.1.14",
     "next-transpile-modules": "^10.0.1",
+    "nodemailer": "^6.9.5",
     "nss": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
