--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node server.js",
-    "lint": "next lint",
-    "proxy": "mkcert -install && mkcert localhost && local-ssl-proxy --source 3010 --target 3000 --cert localhost.pem --key localhost-key.pem"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -16,14 +15,21 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.2",
     "gsap-trial": "^3.12.2",
+    "http-proxy-middleware": "^2.0.6",
     "https": "^1.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
@@ -46,6 +52,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.4",
+    "@types/nodemailer": "^6.4.10",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
