--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
+    "react-use-scroll-snap": "^1.0.0",
     "swr": "^2.2.2",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
